[package]
name = "mio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
mio = { version = "0.8.10", features = ["os-poll", "net"] }
slab = "0.4.9"
